--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Magnetomage's github page</title>
+    </head>
     <body>
         <h1>Under Construction</h1>
         <p>this is a page hosted on github, and is under construction.</p>
