--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,13 @@
         <title>Magnetomage's github page</title>
     </head>
     <body>
-        <h1>Under Construction</h1>
-        <p>this is a page hosted on github, and is under construction.</p>
-    </body>
+		<div>
+			<h3 class="center-text">Count down to NaNoWriMo</h3>
+			<div class="center-text">
+				<h4 class="badge badge-pill badge-primary rounded-lg" style="font-size:24px; text-align: center;"> Time Remaining until deadline: <span id="explain" class="bubble center-text">16d 6h 6m 6s </span></h4>
+			</div>
+		</div>
+	</body>
+	<script type="text/javascript" src="CountScript.js">
+	</script>
 </html>
